お問い合わせフォームを実装

--- a/app/views/contact_mailer/admin_email.text.erb
+++ b/app/views/contact_mailer/admin_email.text.erb
@@ -1,6 +1,7 @@
 <%= @name %> 様より，「アプリ名」にお問い合わせがありました。
-=*=*=*=*=*=*=*= お問い合わせ内容 =*=*=*=*=*=*=*=
+============== お問い合わせ内容 ==================
 【氏名】<%= @contact.name %>
 【メールアドレス】<%= @contact.email %>
-<%= @contact.content %>
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+【電話番号】<%= @contact.phonenumber %>
+<%= @contact.message %>
+=============================================
