--- a/app/views/contact_mailer/user_email.text.erb
+++ b/app/views/contact_mailer/user_email.text.erb
@@ -3,8 +3,8 @@
 2営業日以内に，担当者よりご連絡いたします。
 今後とも「アプリ名」をよろしくお願いいたします。
 ============== お問い合わせ内容 ==================
-<%= @contact.content %>
-==============================================
+<%= @contact.message %>
+=============================================
 ※本メールは送信専用アドレスのため、返信いただいてもお答えできません。
 本メールに心当たりがない場合は、本メールの削除をお願いいたします。
 また、ご不明な点がございましたら、下記問い合わせ窓口までお問い合わせください。
