--- a/app/views/contacts/_confirm_fields.html.erb
+++ b/app/views/contacts/_confirm_fields.html.erb
@@ -5,12 +5,12 @@
 </div>
 <div>
   <%= form.label :email %>
-  <%= form.text_field :email, readonly: true %>
+  <%= form.email_field :email, readonly: true %>
   <%= form.hidden_field :email %>
 </div>
 <div>
   <%= form.label :phonenumber %>
-  <%= form.number_field :phonenumber, readonly: true %>
+  <%= form.telephone_field :phonenumber, readonly: true %>
   <%= form.hidden_field :phonenumber %>
 </div>
 <div>
