お問い合わせフォームの電話番号を修正

--- a/app/views/contacts/_confirm_fields.html.erb
+++ b/app/views/contacts/_confirm_fields.html.erb
@@ -10,7 +10,7 @@
 </div>
 <div>
   <%= form.label :phonenumber %>
-  <%= form.telephone_field :phonenumber, readonly: true %>
+  <%= form.number_field :phonenumber, readonly: true %>
   <%= form.hidden_field :phonenumber %>
 </div>
 <div>
